# back-end

./: .gitignore  Cargo.toml  build.rs
migrations/: 20241203190204_users.up.sql
src/: main.rs
src/helpers/: mod.rs
src/helpers/cells/: color.rs  files.rs  mod.rs  position.rs  processes.rs
src/helpers/database/: connection.rs
src/helpers/http/: error_handlers.rs  jwt.rs  mod.rs  socket.rs  socket_messages.rs  socket_session.rs
src/models/: user.rs
src/routes/: mod.rs  socket.rs
src/routes/auth/: activate.rs  login.rs  mod.rs  register.rs  user.rs
