[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-ws = "0.3.0"
bcrypt = "0.16.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
dotenvy = "0.15.7"
